--- a/app/13order/views/grouplist.html
+++ b/app/13order/views/grouplist.html
@@ -52,7 +52,7 @@
         <th class="col-md-2 text-center">出游信息</th>
         <th class="col-md-3 text-center">导游信息</th>
         <th class="col-md-2 text-center">备注</th>
-        <th class="col-md-1 text-center">最后更新时间</th>
+        <th class="col-md-1 text-center">下单时间</th>
       </tr>
     </thead>
     <tbody>
@@ -62,7 +62,7 @@
         <td class="text-center">[{{obj.book_count}}人][{{obj.arrival_date}}][{{obj.ticket_code}}]</td>
         <td class="text-center">[{{obj.guide_name}}][{{obj.guide_mobile}}][{{obj.vehicle_number}}]</td>
         <td class="text-center">{{obj.remark}}</td>
-        <td class="text-center">{{obj.update_time}}</td>
+        <td class="text-center">{{obj.create_time}}</td>
       </tr>
     </tbody>
   </table>
