--- a/app/02device/views/module.html
+++ b/app/02device/views/module.html
@@ -14,8 +14,16 @@
 		<div class="col-xs-6">
 			<select class="form-control" ng-model="obj.view" 
               ng-options="view.code as view.name for view in viewarr"
+              ng-disabled="lock"
             >
             </select>
+		</div>
+		<div class="col-xs-2">
+			<button type="button" class="btn btn-primary " 
+		    ng-click="remove()" ng-show="obj.id != ''"
+		    >
+		    解除绑定
+		    </button>
 		</div>
 	</div>
 
@@ -63,7 +71,7 @@
 		</div>
 	</div>
 
-	<div class="form-group">
+	<!-- <div class="form-group">
 		<label class="col-xs-2 control-label">删除标志</label>
 		<div class="col-xs-6">
 			<label class="radio-inline">
@@ -77,7 +85,7 @@
 			  > 已删除
 			</label>
 		</div>
-	</div>
+	</div> -->
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">散票-权限状态</label>
