--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -3,6 +3,7 @@
   <div ui-tree-handle class="tree-node tree-node-content"
     ng-click="getit(this)" 
     ng-class="{'unavailable': node.unavailable, 'selected' : obj.id != undefined && node.id != undefined && obj.id == node.id} "
+    ng-show="visible(this)"
   >
     <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" 
     data-nodrag ng-click="toggle(this)" >
@@ -28,16 +29,34 @@
       </small>
     </p>
 
-    <!-- <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
-        class="glyphicon glyphicon-remove"></span></a>
-    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
-        class="glyphicon glyphicon-plus"></span></a> -->
   </div>
   <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}" >
-    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
+    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'"
+      >
     </li>
   </ol>
 </script>
+
+
+<!-- Nested node template -->
+<!-- <script type="text/ng-template" id="nodes_renderer.html">
+  <div ui-tree-handle class="tree-node tree-node-content">
+    <a class="btn btn-success btn-xs" data-nodrag ng-click="toggle(this)">
+      <span class="glyphicon"
+            ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}">
+      </span>
+    </a>
+    {{node.name}}
+    <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
+        class="glyphicon glyphicon-remove"></span></a>
+    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
+        class="glyphicon glyphicon-plus"></span></a>
+  </div>
+  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
+    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'" ng-show="visible(node)">
+    </li>
+  </ol>
+</script> -->
 
 
 
@@ -64,12 +83,32 @@
 
 
 <div class="row">
-  <div class="col-sm-5" style="height:600px; overflow: auto; ">
-    <div ui-tree id="tree-root" data-nodrop-enabled="true" data-drag-enabled="false">
+
+  <div class="col-sm-5" style="height:550px; overflow: auto; ">
+    <div class="row form-horizontal">
+      <label class="col-xs-3 control-label text-right">景区搜索</label>
+      <div class="col-xs-9">
+        <input type="text" class="form-control" 
+          ng-model="query" ng-change="findNodes()">
+      </div>
+    </div>
+
+
+    <div ui-tree id="tree-root" data-nodrop-enabled="true" 
+    data-drag-enabled="false" >
       <ol ui-tree-nodes ng-model="data">
-        <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
+        <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"
+          ng-show="visible(node)"
+        ></li>
       </ol>
     </div>
+
+    <!-- <div ui-tree id="tree-root">
+      <ol ui-tree-nodes="" ng-model="data">
+        <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'" ng-show="visible(node)"></li>
+      </ol>
+    </div> -->
+
 
   </div>
 
