--- a/app/14statistics/views/statisticscompanylist.html
+++ b/app/14statistics/views/statisticscompanylist.html
@@ -57,6 +57,18 @@
         <td class="text-center">{{obj.cost_price  * 0.01 | currency : '￥'}}</td>
         <td class="text-center">{{obj.cost_price * obj.used  * 0.01 | currency : '￥'}}</td>
       </tr>
+      <tr >
+        <td class="text-center">总计</td>
+        <td class="text-center"></td>
+        <td class=""></td>
+        <td class="text-center"></td>
+
+        <td class="text-center">{{total.buy}}</td>
+        <td class="text-center">{{total.used}}</td>
+        <td class="text-center">{{total.back}}</td> 
+        <td class="text-center"></td>
+        <td class="text-center">{{total.total * 0.01 | currency : '￥'}}</td>
+      </tr>
     </tbody>
   </table>
 
