--- a/app/14statistics/views/statisticssale.html
+++ b/app/14statistics/views/statisticssale.html
@@ -62,8 +62,22 @@
         <td class="text-center">{{obj.used}}</td>
         <td class="text-center">{{obj.back}}</td>
         <td class="text-center">{{obj.cost_price  * 0.01 | currency : '￥'}}</td>
-        <td class="text-center">{{obj.cost_price * obj.used  * 0.01 | currency : '￥'}}</td>
+        <td class="text-center">{{obj.cost_price * (obj.buy - obj.back)  * 0.01 | currency : '￥'}}</td>
       </tr>
+      <tr >
+        <td class="text-center">总计</td>
+        <td class="text-center"></td>
+        <td class=""></td>
+        <td class="text-center"></td>
+        <td class="text-center"></td>
+
+        <td class="text-center">{{total.buy}}</td>
+        <td class="text-center">{{total.used}}</td>
+        <td class="text-center">{{total.back}}</td> 
+        <td class="text-center"></td>
+        <td class="text-center">{{total.total * 0.01 | currency : '￥'}}</td>
+      </tr>
+
     </tbody>
   </table>
 
