--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -48,7 +48,7 @@
         <th class="col-md-1 text-center">退票数量</th>
         <th class="col-md-1 text-center">政府补贴</th>
         <th class="col-md-1 text-center">单价</th>
-        <th class="col-md-1 text-center">总计</th>
+        <th class="col-md-1 text-center">居游结算价</th>
       </tr>
     </thead>
     <tbody>
