--- a/app/14statistics/views/viewlist.html
+++ b/app/14statistics/views/viewlist.html
@@ -79,7 +79,7 @@
         <td class="text-center">{{total.buy}}</td>
         <td class="text-center">{{total.used}}</td>
         <td class="text-center">{{total.back}}</td>
-        <td class="text-center"></td>
+        <td class="text-center">{{total.gov * 0.01 | currency : '￥'}}</td>
         <td class="text-center"></td>
         <td class="text-center">{{total.total * 0.01 | currency : '￥'}}</td>
       </tr>
