--- a/app/12sale/views/selling.html
+++ b/app/12sale/views/selling.html
@@ -60,7 +60,7 @@
 
 
 
-<div class="col-sm-12" ng-show="sale_category == 'F11'">
+<div class="col-sm-12" ng-show="sale_category == 'F11' || sale_category == 'F14'">
 <div class="panel panel-default">
   <div class="panel-body">
       <div class="form-group form-inline">
