--- a/app/10account/views/account.html
+++ b/app/10account/views/account.html
@@ -12,9 +12,10 @@
         }"></span></a>
     {{node.name}}
     <!-- <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
-        class="glyphicon glyphicon-remove"></span></a>
-    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
-        class="glyphicon glyphicon-plus"></span></a> -->
+        class="glyphicon glyphicon-remove"></span></a> -->
+    <a class="pull-right btn btn-primary btn-xs" data-nodrag 
+    ng-click="newSubItem(this,$event)" style="margin-right: 8px;"><span
+        class="glyphicon glyphicon-plus"></span></a>
   </div>
   <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
     <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
