--- a/app/03doc/views/name.html
+++ b/app/03doc/views/name.html
@@ -14,6 +14,8 @@
 			<select class="form-control" ng-model="group_id" >
 				<option value="ticket_destory"> 消票 </option>
 				<option value="ticketorder_query"> 订单查询 </option>
+				<option value="product"> 产品 </option>
+				<option value="order"> 订单 </option>
 			</select>
 
 		</div>
