--- a/app/10account/views/account.html
+++ b/app/10account/views/account.html
@@ -10,12 +10,13 @@
           'glyphicon-chevron-right': collapsed,
           'glyphicon-chevron-down': !collapsed
         }"></span></a>
-    {{node.name}}
+    {{node.name}} （{{node.code}}）
     <!-- <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
         class="glyphicon glyphicon-remove"></span></a> -->
-    <a class="pull-right btn btn-primary btn-xs" data-nodrag 
-    ng-click="newSubItem(this,$event)" style="margin-right: 8px;"><span
-        class="glyphicon glyphicon-plus"></span></a>
+    <!-- <a class="pull-right btn btn-primary btn-xs" data-nodrag 
+    ng-click="newSubItem(this,$event)" style="margin-right: 8px;">
+    	<span class="glyphicon glyphicon-plus"></span>
+    </a> -->
   </div>
   <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
     <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
@@ -25,6 +26,9 @@
 
 <div class="row">
   <div class="col-sm-4">
+  	<button type="button" class="btn btn-default" ng-click="createstb()">
+  		创建同业社
+  	</button>
     <div ui-tree id="tree-root" data-nodrop-enabled="true" data-drag-enabled="false">
       <ol ui-tree-nodes ng-model="data">
         <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
@@ -75,7 +79,9 @@
 	        <td class="text-center">{{obj.name}}</td>
 	        <td class="text-center">{{obj.mobile}}</td>
 	        <td class="text-center">
-	          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs">编辑</a>
+	          <a ng-click="edit(obj.id)" class="btn btn-success btn-xs"
+	          	ng-show="editshow == true"
+	          >编辑</a>
 	        </td>
 	      </tr>
 	    </tbody>
