--- a/app/10account/views/createaccount.html
+++ b/app/10account/views/createaccount.html
@@ -11,10 +11,10 @@
             <div class="form-group">
                 <label class="col-xs-2 control-label">登录名</label>
                 <div class="col-xs-6 form-horizontal">
-                    <span class="col-sm-4 control-label" 
-                    style="padding-left: 0px; padding-right: 0px;" 
-                    >{{company.code}} + </span>
-                    <div class="col-sm-8" style="padding-left: 0px;" >
+                    <span class="col-sm-5 control-label" 
+                    style="padding-left: 0px; padding-right: 2px;" 
+                    >{{code}} + </span>
+                    <div class="col-sm-7" style="padding-left: 2px;" >
                       <input type="text" 
                         class="form-control" placeholder="必填"
                         ng-model="obj.loginName" 
