--- a/app/10account/views/mechanism.html
+++ b/app/10account/views/mechanism.html
@@ -11,17 +11,10 @@
             <div class="form-group">
                 <label class="col-xs-3 control-label">旅行社名称</label>
                 <div class="col-xs-9">
-                    <input type="text" class="form-control" ng-model="obj.name" >
+                    <input type="text" class="form-control" ng-model="name" >
                 </div>
             </div>
 
-           <!--  <div class="form-group">
-                <label class="col-xs-3 control-label">警戒线</label>
-                <div class="col-xs-9">
-                    <input type="number" class="form-control" ng-model="obj.picket_line" >
-                </div>
-            </div>
- -->
         </div>
 
     </div>
