--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -3,6 +3,10 @@
     <div class="panel-body">
         <div class="form-group form-inline">
             <div class="col-sm-10">
+                <p class="form-control-static">
+                    账户余额：{{balance_price | currency : '¥'}}
+
+                </p>
                 <!-- <label>分销商名称</label>&nbsp;&nbsp;
                 <input type="text" class="form-control" ng-model="searchform.name" >
                 &nbsp;&nbsp;&nbsp;&nbsp; -->
@@ -46,7 +50,7 @@
         <td class="text-center">{{obj.picket_line | currency : '￥'}}</td> -->
         <td class="text-center">
           <a ng-click="recharge(obj)" class="btn btn-success btn-xs">充值</a>
-          <a ng-click="trackinfo(obj)" class="btn btn-info btn-xs">明细</a>
+          <!-- <a ng-click="trackinfo(obj)" class="btn btn-info btn-xs">明细</a> -->
           <a ng-click="update(obj)" class="btn btn-danger btn-xs">编辑</a>
         </td>
       </tr>
@@ -54,7 +58,7 @@
   </table>
 
 
-  <div class="text-right">
+<!--   <div class="text-right">
 
     <uib-pagination 
       total-items="bigTotalItems" 
@@ -71,7 +75,7 @@
       rotate="false">
     </uib-pagination>
 
-  </div>
+  </div> -->
   
 
 </div>
