--- a/app/06deposit/views/trackinfo.html
+++ b/app/06deposit/views/trackinfo.html
@@ -3,10 +3,12 @@
       <tr>
         <th class="col-md-1 text-center">类型</th>
         <th class="col-md-2 text-center">金额</th>
-        <th class="col-md-3 text-center">订单编号</th>
+        <th class="col-md-2 text-center">订单编号</th>
         <th class="col-md-2 text-center">操作时间</th>
-        <th class="col-md-2 text-center">操作机构</th>
-        <th class="col-md-2 text-center">操作帐号</th>
+     <!--    <th class="col-md-2 text-center">操作机构</th>
+        <th class="col-md-2 text-center">操作帐号</th> -->
+        <th class="col-md-5 text-center">备注</th>
+
       </tr>
     </thead>
     <tbody>
@@ -15,8 +17,9 @@
         <td class="text-center">{{obj.price | currency : '¥'}}</td>
         <td class="text-center">{{obj.order_code}}</td>
         <td class="text-center">{{obj.create_time}}</td>
-        <td class="text-center">{{obj.create_company_code}}</td>
-        <td class="text-center">{{obj.create_login_name}}</td>
+        <!-- <td class="text-center">{{obj.create_company_code}}</td>
+        <td class="text-center">{{obj.create_login_name}}</td> -->
+        <td class="text-center">{{obj.remarks}}</td>
       </tr>
     </tbody>
   </table>
