--- a/app/07product/views/tktsale.html
+++ b/app/07product/views/tktsale.html
@@ -26,13 +26,14 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-3 text-center">销售品名称</th>
+        <th class="col-md-2 text-center">销售品名称</th>
         <th class="col-md-1 text-center">销售品编号</th>
         <th class="col-md-2 text-center">销售品分类</th>
         <th class="col-md-1 text-center">销售品状态</th>
         <th class="col-md-1 text-center">市场价</th>
         <th class="col-md-1 text-center">指导价</th>
         <th class="col-md-1 text-center">分销商成本</th>
+        <th class="col-md-1 text-center">排序</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
@@ -46,12 +47,21 @@
         <td class="text-center">{{obj.guide_price * 0.01 | currency : '￥'}}</td>
         <td class="text-center">{{obj.cost_price * 0.01 | currency : '￥'}}</td>
         <td class="text-center">
+          <input class="input-sm" 
+            style="height:22px; width:50px; border:1px solid;" 
+            type="text" 
+            value="{{obj.asort}}" 
+            ng-model="obj.asort">
+          <a ng-click="asort(obj.id, obj.asort)" class="btn btn-info btn-xs">go</a> 
+        </td>
+        <td class="text-center">
           <a ng-show="obj.state=='1'" ng-click="stop(obj.id)" class="btn btn-primary btn-xs">下架</a>
           <a ng-show="obj.state=='0' || obj.state=='2'" ng-click="start(obj.id)" class="btn btn-danger btn-xs">上架</a>
           <a ng-click="edit(obj.id)" ng-show="obj.state=='0'" class="btn btn-success btn-xs">编辑</a>
           <a ng-show="obj.used_state=='1'" ng-click="usedstart(obj.id)" class="btn btn-primary btn-xs">允许消票</a>
           <a ng-show="obj.used_state=='0'" ng-click="usedstop(obj.id)" class="btn btn-danger btn-xs">禁止消票</a>
           <a ng-click="info(obj.id)" class="btn btn-warning btn-xs">详情</a>
+            
           <!-- <a uib-popover="{{obj.book_info}}" popover-title="预订需知" type="button" class="btn btn-default btn-xs" uib-popover="On the left">预订需知</a> -->
         </td>
       </tr>
