--- a/app/06deposit/views/trackinfo.html
+++ b/app/06deposit/views/trackinfo.html
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.type}}</td>
+        <td class="text-center">{{obj.type_name}}</td>
         <td class="text-center">{{obj.price | currency : '¥'}}</td>
         <td class="text-center">{{obj.order_code}}</td>
         <td class="text-center">{{obj.create_time}}</td>
