--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -136,12 +136,12 @@
 					    	<label class="radio-inline">
 							  <input type="radio" name="pay_type" value="0"
 							  ng-model="saleobj.pay_type"
-							  > 需要支付
+							  > 其他方式支付
 							</label>
 							<label class="radio-inline">
 							  <input type="radio" name="pay_type" value="1"
 							  ng-model="saleobj.pay_type"
-							  > 无需支付
+							  > 预存支付
 							</label>
 					    </div>
 				  	</div>
