--- a/app/01ticket/views/input.html
+++ b/app/01ticket/views/input.html
@@ -1,6 +1,6 @@
 
 
-<div class=" col-md-4 ">
+<!-- <div class=" col-md-4 ">
 <div class="panel panel-default">
 	<div class="panel-heading text-center "><h4>测试数据</h4></div>
 
@@ -21,10 +21,10 @@
 
 	</div>
 </div>
-</div>
+</div> -->
 
 
-<div class=" col-md-8 ">
+<div class=" col-md-8 col-md-offset-2">
 <div class="panel panel-default">
 	<div class="panel-heading text-center "><h4>智慧景区验票系统</h4></div>
 
@@ -33,7 +33,7 @@
 		<div class="form-group mt10">
 		    
 		    <div class="col-sm-9">
-		      <input type="text" class="form-control" ng-model="device" placeholder="输入设备码">
+		      <input type="text" class="form-control" ng-model="device" placeholder="输入设备码" ng-readonly="true">
 		    </div>
 
 		  </div>
