--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -92,7 +92,7 @@
         <td class="text-center"><br>{{obj.ticket_state_name}}</td>
         <td class="text-center">{{obj.company_name}}<br>{{obj.company_code}}<br>{{obj.operation_login_name}}</td>
         <th class="text-center">
-          <a ng-click="ticketlist(obj.code)" class="btn btn-success btn-xs">票信息</a>
+          <a ng-click="ticketlist(obj)" class="btn btn-success btn-xs">票信息</a>
           <br>
           <a ng-click="orderinfo(obj)" class="btn btn-info btn-xs"
           has-permission='orderinfo' 
