--- a/app/13order/views/orderticketlist.html
+++ b/app/13order/views/orderticketlist.html
@@ -1,54 +1,76 @@
-<div class="col-sm-12">
 
-<div class="panel panel-danger" ng-repeat="tkttype in objs track by $index" >
-  <!-- Default panel contents -->
-  <div class="panel-heading">{{tkttype.name}} 第 {{tkttype.sequence}} 个
 
-    <button type="button" 
-      class="btn btn-xs btn-info pull-right"
-      ng-click="back(tkttype)"
-    >
-      退票
-    </button>
-  </div>
 
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th class="col-md-2 text-center">景区名称</th>
-        <th class="col-md-4 text-center">票名称</th>
-        <th class="col-md-1 text-center">票号</th>
-        <th class="col-md-1 text-center">未使用</th>
-        <th class="col-md-1 text-center">未退票</th>
-        <th class="col-md-1 text-center">可用</th>
-        <th class="col-md-2 text-center">操作时间</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="obj in tkttype.ticketarr">
-        <td class="">{{obj.place_name}}</td>
-        <td class="">{{obj.type_name}}</td>
-        <td class="text-center">{{obj.code}}</td>
-        <td class="text-center">
-          <span ng-show="{{obj.used == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
-          <span ng-show="{{obj.used == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
-        </td>
-        <td class="text-center">
-          <span ng-show="{{obj.back == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
-          <span ng-show="{{obj.back == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
-        </td>
-        <td class="text-center">
-          <span ng-show="{{obj.state == '1'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
-          <span ng-show="{{obj.state == '0'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
-        </td>
-        <td class="text-center">{{obj.otime}}</td>
+<div class="modal-header">
+    <h4 class="modal-title">票信息</h4>
+</div>
+<div class="modal-body">
 
-      </tr>
-    </tbody>
-  </table>
-  
+    <div class="container-fluid form-horizontal ">
+        
+      <div class="col-sm-12">
+
+        <div class="panel panel-danger" ng-repeat="tkttype in objs track by $index" >
+          <!-- Default panel contents -->
+          <div class="panel-heading">{{tkttype.name}} 第 {{tkttype.sequence}} 个
+
+            <button type="button" 
+              class="btn btn-xs btn-info pull-right"
+              ng-click="back(tkttype)"
+            >
+              退票
+            </button>
+          </div>
+
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th class="col-md-2 text-center">景区名称</th>
+                <th class="col-md-4 text-center">票名称</th>
+                <th class="col-md-1 text-center">票号</th>
+                <th class="col-md-1 text-center">未使用</th>
+                <th class="col-md-1 text-center">未退票</th>
+                <th class="col-md-1 text-center">可用</th>
+                <th class="col-md-2 text-center">操作时间</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr ng-repeat="obj in tkttype.ticketarr">
+                <td class="">{{obj.place_name}}</td>
+                <td class="">{{obj.type_name}}</td>
+                <td class="text-center">{{obj.code}}</td>
+                <td class="text-center">
+                  <span ng-show="{{obj.used == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                  <span ng-show="{{obj.used == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                </td>
+                <td class="text-center">
+                  <span ng-show="{{obj.back == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                  <span ng-show="{{obj.back == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                </td>
+                <td class="text-center">
+                  <span ng-show="{{obj.state == '1'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                  <span ng-show="{{obj.state == '0'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
+                </td>
+                <td class="text-center">{{obj.otime}}</td>
+
+              </tr>
+            </tbody>
+          </table>
+          
+        </div>
+
+
+        </div>
+    </div>
+</div>
+<div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">返回</button>
 </div>
 
 
-</div>
+
+
+
+
+
   
