--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -21,7 +21,9 @@
                 <button type="button" class="btn btn-default" ng-click="load()">立即搜索</button> -->
             </div>
             <div class="col-sm-2 text-right">
-                <button type="button" class="btn btn-info new" ng-click="create()">创建预存</button>
+                <button type="button" class="btn btn-info new" ng-click="create()"
+
+                >创建预存</button>
             </div>
         </div>
     </div>
