--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -1,9 +1,17 @@
+
+<div class="modal-header">
+    <h4 class="modal-title">销售品信息</h4>
+</div>
+<div class="modal-body">
+    <div class="container-fluid form-horizontal ">
+
 <div class="col-xs-12 " >
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			基本信息
 			<button type="button" 
 				class="btn btn-xs btn-info pull-right"
+				ng-show="what == 'edit' || saleobj.id == ''"
 				ng-click="salego()"
 			>
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
@@ -12,11 +20,11 @@
 		<div class="panel-body">
 			<div class="container-fluid">
 				
-				<div class="col-xs-12 col-md-8" >
+				<div class="col-xs-12 col-md-12" >
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">销售品名称</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">销售品名称</label>
+						<div class="col-xs-9">
 							<input type="text" class="form-control" placeholder="请输入销售品名称" ng-disabled="saleobj.id != ''"
 							ng-model="saleobj.name"
 							>
@@ -35,8 +43,8 @@
 					</div> -->
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">市场价格</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">市场价格</label>
+						<div class="col-xs-9">
 							<div class="input-group">
 								<span class="input-group-addon">¥</span>
 								<input type="number" class="form-control" placeholder="请输入市场价格" min='0'
@@ -47,8 +55,8 @@
 					</div>
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">居游价格</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">居游价格</label>
+						<div class="col-xs-9">
 							<div class="input-group">
 								<span class="input-group-addon">¥</span>
 								<input type="number" class="form-control" placeholder="请输入居游价格" min='0'
@@ -59,8 +67,8 @@
 					</div>
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">分销商成本价格</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">分销商成本价格</label>
+						<div class="col-xs-9">
 							<div class="input-group">
 								<span class="input-group-addon">¥</span>
 								<input type="number" class="form-control" placeholder="请输入分销商成本价格" min='0'
@@ -71,8 +79,8 @@
 					</div>
 
 					<div class="form-group" >
-						<label class="col-xs-4 control-label">销售品分类</label>
-						<div class="col-xs-8" >
+						<label class="col-xs-3 control-label">销售品分类</label>
+						<div class="col-xs-9" >
 							<select class="form-control" ng-model="saleobj.sale_category" ng-disabled="saleobj.id != ''"
 				              ng-options="type1.value as type1.label for type1 in typearr"
 				            >
@@ -81,8 +89,8 @@
 					</div>
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">短信模板编号</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">短信模板编号</label>
+						<div class="col-xs-9">
 							<input type="text" class="form-control" placeholder="请输入短信模板编号"
 							ng-model="saleobj.sms_template_id"
 							>
@@ -90,8 +98,8 @@
 					</div>
 
 					<div class="form-group">
-						<label class="col-xs-4 control-label">短信追加内容</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">短信追加内容</label>
+						<div class="col-xs-9">
 							<textarea class="form-control" rows="3"
 							ng-model="saleobj.sms_diy"
 							></textarea>
@@ -99,8 +107,8 @@
 					</div>
 
 					<div class="form-group">
-					    <label class="col-xs-4 control-label">短信发送类型</label>
-					    <div class="col-xs-8">
+					    <label class="col-xs-3 control-label">短信发送类型</label>
+					    <div class="col-xs-9">
 					    	<label class="radio-inline">
 							  <input type="radio" name="sms_type" value="1"
 							  ng-model="saleobj.sms_type"
@@ -115,8 +123,26 @@
 				  	</div>
 
 				  	<div class="form-group">
-					    <label class="col-xs-4 control-label">系统确认</label>
-					    <div class="col-xs-8">
+						<label class="col-xs-3 control-label">销售品图片</label>
+						<div class="col-xs-9">
+							<img ng-src="{{saleobj.top_pic}}" width="250" height="150" ng-model="saleobj.top_pic">
+							<input type="file" nv-file-select uploader="uploader1" />
+							<br>
+							<ul class="list-group">
+							    <li class="list-group-item" ng-repeat="item in uploader1.queue">
+							        文件名: <span ng-bind="item.file.name"></span>
+							        <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+							        <div class="progress mt10">
+							            <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader1.progress + '%' }"></div>
+							        </div>
+							    </li>
+							</ul>
+						</div>
+					</div>
+
+				  	<div class="form-group">
+					    <label class="col-xs-3 control-label">系统确认</label>
+					    <div class="col-xs-9">
 					    	<label class="radio-inline">
 							  <input type="radio" name="sys_affirm_type" value="0"
 							  ng-model="saleobj.sys_affirm_type"
@@ -131,8 +157,8 @@
 				  	</div>
 
 				  	<div class="form-group">
-					    <label class="col-xs-4 control-label">支付类型</label>
-					    <div class="col-xs-8">
+					    <label class="col-xs-3 control-label">支付类型</label>
+					    <div class="col-xs-9">
 					    	<label class="radio-inline">
 							  <input type="radio" name="pay_type" value="0"
 							  ng-model="saleobj.pay_type"
@@ -147,8 +173,8 @@
 				  	</div>
 
 				  	<div class="form-group">
-					    <label class="col-xs-4 control-label">库存类型</label>
-					    <div class="col-xs-8">
+					    <label class="col-xs-3 control-label">库存类型</label>
+					    <div class="col-xs-9">
 					    	<label class="radio-inline">
 							  <input type="radio" name="stock_type" value="0"
 							  ng-model="saleobj.stock_type"
@@ -163,8 +189,8 @@
 				  	</div>
 
 				  	<div class="form-group">
-					    <label class="col-xs-4 control-label">销售目标</label>
-					    <div class="col-xs-8">
+					    <label class="col-xs-3 control-label">销售目标</label>
+					    <div class="col-xs-9">
 					    	<label class="radio-inline">
 							  <input type="radio" name="sale_target_type" value="0"
 							  ng-model="saleobj.sale_target_type"
@@ -179,8 +205,8 @@
 				  	</div>
 
 				  	<div class="form-group">
-						<label class="col-xs-4 control-label">销售品简介</label>
-						<div class="col-xs-8">
+						<label class="col-xs-3 control-label">销售品简介</label>
+						<div class="col-xs-9">
 							<!-- <textarea class="form-control" rows="3"
 							ng-model="saleobj.detail"
 							></textarea> -->
@@ -189,9 +215,11 @@
 					</div>
 
 
+
+
 				</div>
 
-				<div class="col-xs-12 col-md-4">
+				<!-- <div class="col-xs-12 col-md-4">
 					<label class="control-label">销售品图片</label>
 					<img ng-src="{{saleobj.top_pic}}" width="150" height="150" ng-model="saleobj.top_pic">
 					<input type="file" nv-file-select uploader="uploader1" /><br/>
@@ -204,14 +232,16 @@
 					        </div>
 					    </li>
 					</ul>
-				</div>
+				</div> -->
+
+
 			</div>
 		</div>
 	</div>
 </div>
 
 
-<div class="col-xs-10 col-xs-offset-1" ng-show="saleobj.id" >
+<div class="col-xs-12" ng-show="saleobj.id" >
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			详情信息
@@ -236,6 +266,7 @@
 						</div>
 						<div class="col-xs-2">
 							<a ng-click="add()" class="btn btn-success btn-sm"
+							ng-show="saleobj.state == '0'"
 							>添加</a>
 						</div>
 					</div>
@@ -252,7 +283,9 @@
 					        <td class="text-center">{{obj.goods_name}}</td>
 					        <td class="text-center">
 					          <a ng-click="del(obj.id)" 
-					          class="btn btn-warning btn-xs">删除</a>
+					          class="btn btn-warning btn-xs"
+					          ng-show="saleobj.state == '0'"
+					          >删除</a>
 					        </td>
 					      </tr>
 					    </tbody>
@@ -267,7 +300,7 @@
 
 
 
-<div class="col-xs-10 col-xs-offset-1" ng-show="funobj.hasOwnProperty('govsubsidy')">
+<div class="col-xs-12 " ng-show="funobj.hasOwnProperty('govsubsidy')">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			旅游局补贴
@@ -308,7 +341,7 @@
 
 
 
-<div class="col-xs-10 col-xs-offset-1" ng-show="funobj.hasOwnProperty('juyousubsidy')">
+<div class="col-xs-12 " ng-show="funobj.hasOwnProperty('juyousubsidy')">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			居游补贴
@@ -351,7 +384,7 @@
 
 
 
-<div class="col-xs-10 col-xs-offset-1" ng-show="funobj.hasOwnProperty('juyousubsidy')">
+<div class="col-xs-12 " ng-show="funobj.hasOwnProperty('juyousubsidy')">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			用户限制数量
@@ -388,4 +421,7 @@
 			</div>
 		</div>
 	</div>
+</div>
+
+</div>
 </div>
