--- a/app/03doc/views/name.html
+++ b/app/03doc/views/name.html
@@ -16,6 +16,7 @@
 				<option value="ticketorder_query"> 订单查询 </option>
 				<option value="product"> 产品 </option>
 				<option value="order"> 订单 </option>
+				<option value="instructions"> 接口调用说明 </option>
 			</select>
 
 		</div>
