--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-sm-2 text-right">
                 <button type="button" class="btn btn-info new" ng-click="create()"
-
+                has-permission='createdeposit' 
                 >创建预存</button>
             </div>
         </div>
