--- a/app/12sale/views/sellinggroupsignup.html
+++ b/app/12sale/views/sellinggroupsignup.html
@@ -1,8 +1,9 @@
 
-<div class="col-xs-10 col-xs-offset-1">
+<div class="col-xs-12">
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			报名信息
+
 			<button type="button" 
 				class="btn btn-xs btn-info pull-right"
 				ng-click="go()"
@@ -12,10 +13,66 @@
 		</div>
 		<div class="panel-body">
 
-			<div class="col-md-11"  style="padding:0px;">
+			<div class="col-xs-4">
+			    <div class="input-group">
+			      <input type="number" class="form-control" placeholder="请输入添加人数"
+			      ng-model="num"
+			      >
+			      <span class="input-group-btn">
+			      	<button class="btn btn-default" type="button"
+			      	ng-click="add(num)"
+			      	>Go!</button>
+			      </span>
+			    </div>
+			</div>
+
+		</div>
+
+		<table class="table table-bordered">
+	      <thead>
+	        <tr>
+	          <th class="text-center col-xs-2">电话</th>
+	          <th class="text-center col-xs-2">姓名</th>
+	          <th class="text-center col-xs-3">身份证</th>
+	          <th class="text-center col-xs-4">票种</th>
+	          <th class="text-center col-xs-1">操作</th>
+	        </tr>
+	      </thead>
+	      <tbody>
+	        <tr ng-repeat="obj in objs">
+	          <td>
+	          	<input type="text" class="form-control" placeholder="请输入电话"
+				ng-model="obj.mobile" ng-blur="blur($index)"
+				>
+			  </td>
+	          <td>
+	          	<input type="text" class="form-control" placeholder="请输入姓名"
+				ng-model="obj.name" ng-disabled="obj.disabled"
+				>
+			  </td>
+			  <td>
+	          	<input type="text" class="form-control" placeholder="请输入身份证"
+				ng-model="obj.cardno" ng-disabled="obj.disabled"
+				>
+			  </td>
+			  <td>
+	          	<select class="form-control" ng-model="obj.goods_code" 
+	              ng-options="good.goods_code as good.goods_name for good in goodarr"
+	              ng-change="change(obj)"
+	            >
+	            </select>
+			  </td>
+			  <td class="text-center">
+	          	<a ng-click="del($index)" class="btn" style="color: red; padding:0px; padding-top: 5px;">
+			        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+			    </a>
+			  </td>
+	        </tr>
+	        
+	      </tbody>
+	    </table>
 					<!--<div ng-repeat="signobj in objs">-->
-					<div>
-						<div class="col-md-11" style="margin-top:10px; padding:0px;">
+						<!-- <div class="col-md-11" style="margin-top:10px; padding:0px;">
 							<div class="col-xs-1">
 								<label class="control-label">游客{{$index+1}}</label>
 							</div>
@@ -45,9 +102,7 @@
 							<div class="col-xs-2">
 								<h4><span class="label label-warning">单价：{{cost_price | currency : '￥'}}</span></h4>
 							</div>
-						</div>
-					</div>
-			</div>
+						</div> -->
 			<!--<div class="col-xs-1" style="padding:0px;">
 				<h4><button type="button" 
 					class="btn btn-xs btn-info pull-right"
@@ -57,6 +112,6 @@
 				</button></h4>
 			</div>-->
 
-		</div>
+		<!-- </div> -->
 	</div>
 </div>
