--- a/app/13order/views/list.html
+++ b/app/13order/views/list.html
@@ -97,6 +97,9 @@
           <a ng-click="orderinfo(obj)" class="btn btn-info btn-xs"
           has-permission='orderinfo' 
           >订单详情</a>
+          <br>
+          <a ng-click="resend(obj)" class="btn btn-danger btn-xs">重发短信</a>
+          
         </th>
       </tr>
     </tbody>
