--- a/app/06deposit/views/list.html
+++ b/app/06deposit/views/list.html
@@ -33,8 +33,8 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-7 text-center">商户名称</th>
-        <th class="col-md-1 text-center">总量</th>
+        <th class="col-md-8 text-center">商户名称</th>
+        <!-- <th class="col-md-1 text-center">总量</th> -->
         <th class="col-md-1 text-center">余额</th>
         <th class="col-md-1 text-center">信用额度</th>
        <!--  <th class="col-md-2 text-center">欠款时间</th>
@@ -45,7 +45,7 @@
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="">{{obj.seller_name}}</td>
-        <td class="text-center">{{obj.total_price | currency : '¥'}}</td>
+        <!-- <td class="text-center">{{obj.total_price | currency : '¥'}}</td> -->
         <td class="text-center">{{obj.balance_price | currency : '￥'}}</td>
         <td class="text-center">{{obj.loan_limit_price | currency : '￥'}}</td>
         <!-- <td class="text-center">{{obj.arrears_time}}</td>
