--- a/app/12sale/views/sellinggroupmodel.html
+++ b/app/12sale/views/sellinggroupmodel.html
@@ -1,5 +1,14 @@
 <div class="col-xs-10 col-xs-offset-1 form-horizontal" >
 
+	<div class="form-group">
+		<label class="col-xs-2 control-label">预计人数</label>
+		<div class="col-xs-6">
+			<input type="number" class="form-control" placeholder="请输入预计人数"
+			ng-model="groupobj.plan_count"
+			>
+		</div>
+	</div>
+
 	<div ng-show="groupobjstate === 1">
 		<div class="form-group">
 		    <label class="col-xs-2 control-label">出游时间</label>
