--- a/app/12sale/views/sellinggroupsignup.html
+++ b/app/12sale/views/sellinggroupsignup.html
@@ -15,15 +15,25 @@
 
 			<div class="col-xs-4">
 			    <div class="input-group">
+
 			      <input type="number" class="form-control" placeholder="请输入添加人数"
 			      ng-model="num"
 			      >
 			      <span class="input-group-btn">
 			      	<button class="btn btn-default" type="button"
 			      	ng-click="add(num)"
-			      	>Go!</button>
+			      	>添加</button>
 			      </span>
 			    </div>
+			</div>
+
+			<div class="col-xs-4">
+			    <div class="form-group">
+				    <label class="col-sm-2 control-label text-right">总价</label>
+				    <div class="col-sm-10">
+				      <p class="form-control-static">{{totalprice * 0.01 | currency : '￥'}}</p>
+				    </div>
+				  </div>
 			</div>
 
 		</div>
