--- a/app/12sale/views/sellingdetail.html
+++ b/app/12sale/views/sellingdetail.html
@@ -8,17 +8,19 @@
 	            <table class="table table-bordered text-center">
 				    <thead>
 				      <tr>
-				        <th class="text-center">预订人数</th>
-						<th class="text-center">导游姓名</th>
-						<th class="text-center">导游电话</th>
-						<th class="text-center">导游车牌号</th>
-						<th class="text-center col-md-2">备注信息</th>
-						<th class="text-center col-md-1">最后操作时间</th>
+				      	<th class="text-center col-md-1">计划人数</th>
+				        <th class="text-center col-md-1">报名人数</th>
+						<th class="text-center col-md-1">导游姓名</th>
+						<th class="text-center col-md-1">导游电话</th>
+						<th class="text-center col-md-1">导游车牌号</th>
+						<th class="text-center col-md-3">备注信息</th>
+						<th class="text-center col-md-3">最后操作时间</th>
 						<th class="text-center col-md-1">最后操作人</th>
 				      </tr>
 				    </thead>
 				    <tbody>
 				      <tr ng-repeat="obj in objs">
+				      	<td class="text-center">{{obj.plan_count}}</td>
 				        <td class="text-center">{{obj.book_count}}</td>
 				        <td class="text-center">{{obj.guide_name}}</td>
 				        <td class="text-center">{{obj.guide_mobile}}</td>
