--- a/app/12sale/views/sellinggroup.html
+++ b/app/12sale/views/sellinggroup.html
@@ -59,9 +59,9 @@
 			<td class="text-center">
 				<div ng-show="obj.state=='0' && obj.xx=='0'">
 					<a ng-click="signup(obj.code)" class="btn btn-warning btn-sm">报名</a>
-					<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">明细</a>
+					<a ng-click="info(obj.code)" class="btn btn-primary btn-sm">报名详情</a>
 					<a ng-click="edit(obj.code)" class="btn btn-success btn-sm">编辑</a>
-					<a ng-click="detail(obj.code)" class="btn btn-info btn-sm">详情</a>
+					<a ng-click="detail(obj.code)" class="btn btn-info btn-sm">修改纪录</a>
 			        <a ng-click="del(obj.code)" class="btn btn-danger btn-sm">删除</a>
 		        </div>
 	        </td>
