--- a/app/12sale/views/sellinggroupinfo.html
+++ b/app/12sale/views/sellinggroupinfo.html
@@ -9,7 +9,12 @@
 				<div class="col-xs-12" style="margin-bottom:10px;margin-top:-20px;">
 					<h3><span class="label label-info">正价人数：{{zhengjiars}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
 					<span class="label label-info">补贴人数：{{butiers}}人</span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span class="label label-info">总价：{{all_price * 0.01  | currency : '￥'}}</span></h3>
+					<span class="label label-info">总价：{{all_price * 0.01  | currency : '￥'}}</span>
+					&nbsp;&nbsp;&nbsp;
+					<a ng-click="signup()" class="btn btn-success pull-right">继续报名</a>
+					</h3>
+
+
 				</div>
 				<div class="col-xs-12" >
 
@@ -27,7 +32,7 @@
 					    </thead>
 					    <tbody>
 					      <tr ng-repeat="obj in objs">
-					      	<td class="text-center">{{obj.batches}}</td>
+					      	<td class="text-center">第{{obj.batches}}批</td>
 					      	<td class="text-center">{{obj.goods_name}}</td>
 					        <td class="text-center">{{obj.name}}</td>
 					        <td class="text-center">{{obj.mobile}}</td>
